tests/integration/snapshots/integration_test__lint_fmt__fmt_aligns_complex_table_lines_with_snapshot.snap
---
source: tests/integration/lint_fmt.rs
expression: format_snapshot(complex_table_alignment_fmt_fixture())
---
changed: true
idempotent: true
output:
* Inventory
| SKU          | Name               | Qty  | Notes                        |
|--------------+--------------------+------+------------------------------|
| a-1          | Hammer             | 2    | short                        |
| long-sku-200 | *Composite* widget | 1000 | [[https://example.com][ref]] |
| alpha        | mixed width        | 7    |                              |
#+TBLFM: $3=vsum(@2..@4)

  | Step       | Owner           | ETA       |
  |------------+-----------------+-----------|
  | parse      | alice           | today     |
  | projection | bob-the-builder | next week |
