tests/integration/snapshots/integration_test__lint_fmt__fmt_aligns_indented_tables_formulas_and_pipe_rules_with_snapshot.snap
---
source: tests/integration/lint_fmt.rs
expression: "format!(\"idempotent: {}\\n{}\", formatted.output == reformatted.output,\nformatted.output)"
---
idempotent: true
  | Name   | Count |
  |--------+-------|
  | a      | 2     |
  | longer | 100   |
#+TBLFM: $2=vsum(@2..@3)
