tests/integration/snapshots/integration_test__lint_fmt__fmt_aligns_tables_with_snapshot.snap
---
source: tests/integration/lint_fmt.rs
expression: format_snapshot(source)
---
changed: true
idempotent: true
output:
| Name   | Count |
|--------+-------|
| a      | 2     |
| longer | 100   |

#+begin_example
| this | block |
| stays | as-is |
#+end_example
