tests/integration/snapshots/integration_test__lint_fmt__fmt_cli_check_directory_output_is_snapshotted.snap
---
source: tests/integration/lint_fmt.rs
expression: command_snapshot(output)
---
status: 1
stdout:

stderr:
notes/a.org: needs formatting
notes/nested/b.org: needs formatting
