tests/integration/snapshots/integration_test__lint_fmt__fmt_cli_check_output_is_snapshotted.snap
---
source: tests/integration/lint_fmt.rs
expression: command_snapshot(output)
---
status: 1
stdout:

stderr:
dirty.org: needs formatting
