tests/integration/snapshots/integration_test__lint_fmt__fmt_cli_default_writes_file_with_snapshot.snap
---
source: tests/integration/lint_fmt.rs
expression: "format!(\"{}\\nfile: {:?}\", command_snapshot(output),\nfs::read_to_string(dir.join(\"notes.org\")).unwrap())"
---
status: 0
stdout:

stderr:

file: "| A | B      |\n| x | longer |\n"
