tests/integration/snapshots/integration_test__lint_fmt__fmt_cli_directory_path_writes_org_files_with_snapshot.snap
---
source: tests/integration/lint_fmt.rs
expression: "format!(\"{}\\na.org: {:?}\\nnested/b.org: {:?}\\nskip.txt: {:?}\",\ncommand_snapshot(output),\nfs::read_to_string(dir.join(\"notes/a.org\")).unwrap(),\nfs::read_to_string(dir.join(\"notes/nested/b.org\")).unwrap(),\nfs::read_to_string(dir.join(\"notes/skip.txt\")).unwrap())"
---
status: 0
stdout:

stderr:

a.org: "| Key | Value |\n| a   | one   |\n"
nested/b.org: "| A  | B |\n| xx | y |\n"
skip.txt: "skip\n"
