tests/integration/snapshots/integration_test__lint_fmt__fmt_cli_multiple_files_write_with_snapshot.snap
---
source: tests/integration/lint_fmt.rs
expression: "format!(\"{}\\none.org: {:?}\\ntwo.org: {:?}\", command_snapshot(output),\nfs::read_to_string(dir.join(\"one.org\")).unwrap(),\nfs::read_to_string(dir.join(\"two.org\")).unwrap())"
---
status: 0
stdout:

stderr:

one.org: "| Item | Count |\n| one  | 1     |\n"
two.org: "| A     | Longer |\n| value | x      |\n"
