tests/integration/snapshots/integration_test__lint_fmt__fmt_cli_stdin_aligns_tables_with_snapshot.snap
---
source: tests/integration/lint_fmt.rs
expression: command_snapshot(output)
---
status: 0
stdout:
| A     | Longer |
| value | x      |

stderr:
