tests/integration/snapshots/integration_test__lint_fmt__fmt_normalizes_source_with_snapshot.snap
---
source: tests/integration/lint_fmt.rs
expression: format_snapshot(source)
---
changed: true
idempotent: true
output:
* Heading
Body
